修复一些细节

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="load_success_without_anim">load_success_without_anim</string>
     <string name="load_failed_without_anim">load_failed_without_anim</string>
     <string name="repeat_draw">repeat draw</string>
+    <string name="change_color">change color</string>
 </resources>
